content/nomad/v2.0.x/content/commands/operator/scheduler/set-config.mdx
---
layout: docs
page_title: 'nomad operator scheduler set-config command reference'
description: |
  The `nomad operator scheduler set-config` command modifies the scheduler configuration. Set binpack or spread allocation. Enable or disable preemption for batch, service, sysbatch, and system jobs.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-02-16T16:53:13.000Z
last_modified: 2026-02-16T16:53:13.000Z
# END AUTO GENERATED METADATA
---

# `nomad operator scheduler set-config` command reference

The scheduler operator set-config command is used to modify the scheduler
configuration.

## Usage

```plaintext
nomad operator scheduler set-config [options]
```

If ACLs are enabled, this command requires a token with the `operator:write`
capability.

## Options

- `-check-index` - If set, the scheduler config is only updated if the passed
  modify index matches the current server side version. If a non-zero value is
  passed, it ensures that the scheduler config is being updated from a known
  state.

- `-scheduler-algorithm` - Specifies whether scheduler binpacks or spreads
  allocations on available nodes. Must be one of `["binpack"|"spread"]`.

- `-memory-oversubscription` - When true, tasks may exceed their reserved memory
  limit, if the client has excess memory capacity. Tasks must specify [`memory_max`]
  to take advantage of memory oversubscription. Must be one of `[true|false]`.

- `-reject-job-registration` - When true, the server will return permission denied
  errors for job registration, job dispatch, and job scale APIs, unless the ACL
  token for the request is a management token. If ACLs are disabled, no user
  will be able to register jobs. This allows operators to shed load from automated
  processes during incident response. Must be one of `[true|false]`.

- `-pause-eval-broker` - When set to true, the eval broker which usually runs on
  the leader will be disabled. This will prevent the scheduler workers from
  receiving new work. Must be one of `[true|false]`.

- `-preempt-batch-scheduler` - Specifies whether preemption for batch jobs
  is enabled. Note that if this is set to true, then batch jobs can preempt any
  other jobs. Must be one of `[true|false]`.

- `-preempt-service-scheduler` - Specifies whether preemption for service jobs
  is enabled. Note that if this is set to true, then service jobs can preempt any
  other jobs. Must be one of `[true|false]`.

- `-preempt-sysbatch-scheduler` - Specifies whether preemption for system batch
  jobs is enabled. Note that if this is set to true, then system batch jobs can
  preempt any other jobs. Must be one of `[true|false]`.

- `-preempt-system-scheduler` - Specifies whether preemption for system jobs
  is enabled. Note that if this is set to true, then system jobs can preempt any
  other jobs. Must be one of `[true|false]`.

- `-node-limit-for-feasibility-checks` - Limits the number of feasible nodes to
  consider when scheduling a job that specifies spread and/or affinity. Lower
  numbers result in better scheduler performance and more randomization of jobs
  across nodes. Higher numbers result in more deterministic application of
  spread and/or affinity. Must be a non-negative integer. Defaults to 100 if not
  set. Refer to the
  [scheduling performance content](/nomad/docs/job-scheduling/index#scheduling-performance)
  for more details on how this impacts scheduling performance.

## Examples

Modify the scheduler algorithm to spread:

```shell-session
$ nomad operator scheduler set-config -scheduler-algorithm=spread
Scheduler configuration updated!
```

Modify the scheduler algorithm to spread using the check index flag:

```shell-session
$ nomad operator scheduler set-config -scheduler-algorithm=spread -check-index=5
Scheduler configuration updated!
```

Modify the node limit for feasibility checks to 50:

```shell-session
$ nomad operator scheduler set-config -node-limit-for-feasibility-checks=50
Scheduler configuration updated!
```

## General options

@include 'general_options_no_namespace.mdx'

[`memory_max`]: /nomad/docs/job-specification/resources#memory_max
